Add regression models

--- a/Regression_sklearn.ipynb
+++ b/Regression_sklearn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +373,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +433,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +678,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -700,7 +700,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -780,22 +780,20 @@
     "dataset.drop(columns=['Discharge_capacity_ratio',\n",
     "                      'Discharge_energy_ratio',\n",
     "                      'Charge_energy_ratio',\n",
-    "                      'Max_SOC',\n",
     "                      'Charge_capacity',\n",
     "                      'Discharge_capacity',\n",
     "                      'Discharge_energy',\n",
     "                      'Charge_energy',\n",
-    "                      'Charge_rate',\n",
-    "                      'Discharge_rate',\n",
     "                      'Efficiency',\n",
-    "                      'Cycle_time',\n",
+    "                      'Max_current',\n",
     "                      'Min_SOC',\n",
-    "                      'Min_voltage',], inplace=True)\n"
+    "                      'Max_SOC',\n",
+    "                      'Cycle_time',], inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +808,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dataset.copy()\n",
+    "y = X.pop(\"Charge_capacity_ratio\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.0811574929521724\n",
+      "Mean squared error: 0.013238610033722554\n",
+      "Mean absolute percentage error: 0.32571057104979134\n",
+      "Median absolute error: 0.05373241846572573\n",
+      "r2 score: 0.8740441954837226\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "lr_params = {\n",
+    "}\n",
+    "\n",
+    "lr_grid = GridSearchCV(lr, lr_params, n_jobs=-1, cv = 5)\n",
+    "lr_grid.fit(X_train, y_train)\n",
+    "lr_best = lr_grid.best_estimator_\n",
+    "lr_best.get_params()\n",
+    "\n",
+    "lr_predicted = lr_best.predict(X_test)\n",
+    "lr_score = lr_best.score(X_test, y_test)\n",
+    "show_metrics(y_test, lr_predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.0811574929521724\n",
+      "Mean squared error: 0.013238610033722554\n",
+      "Mean absolute percentage error: 0.32571057104979134\n",
+      "Median absolute error: 0.05373241846572573\n",
+      "r2 score: 0.8740441954837226\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 1.0,\n",
+       " 'copy_X': True,\n",
+       " 'fit_intercept': True,\n",
+       " 'l1_ratio': 0.3,\n",
+       " 'max_iter': 1000,\n",
+       " 'normalize': 'deprecated',\n",
+       " 'positive': False,\n",
+       " 'precompute': False,\n",
+       " 'random_state': None,\n",
+       " 'selection': 'cyclic',\n",
+       " 'tol': 0.0001,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elastic_net = ElasticNet()\n",
+    "elastic_net_params = {\n",
+    "    \"l1_ratio\": [0.3, 0.5, 0.7],\n",
+    "}\n",
+    "\n",
+    "elastic_net_grid = GridSearchCV(elastic_net, elastic_net_params, n_jobs=-1, cv = 5)\n",
+    "elastic_net_grid.fit(X_train, y_train)\n",
+    "elastic_net_best = elastic_net_grid.best_estimator_\n",
+    "elastic_net_best.get_params()\n",
+    "\n",
+    "elastic_net_predicted = elastic_net_best.predict(X_test)\n",
+    "elastic_net_score = elastic_net_best.score(X_test, y_test)\n",
+    "show_metrics(y_test, lr_predicted)\n",
+    "elastic_net_best.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.0811567440588483\n",
+      "Mean squared error: 0.013236878880473963\n",
+      "Mean absolute percentage error: 0.3257211089818543\n",
+      "Median absolute error: 0.0537153946704626\n",
+      "r2 score: 0.8740606661554632\n",
+      "{'alpha': 0.01, 'copy_X': True, 'fit_intercept': True, 'max_iter': None, 'normalize': 'deprecated', 'positive': False, 'random_state': None, 'solver': 'cholesky', 'tol': 0.001}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ridge = Ridge()\n",
+    "ridge_params = {\n",
+    "    'alpha': [0.01, 0.1, 0.5, 1, 2],\n",
+    "    'solver' : ['svd', 'cholesky', 'sag', 'saga']\n",
+    "}\n",
+    "\n",
+    "ridge_grid = GridSearchCV(ridge, ridge_params, n_jobs=-1, cv = 5)\n",
+    "ridge_grid.fit(X_train, y_train)\n",
+    "ridge_best = ridge_grid.best_estimator_\n",
+    "ridge_best.get_params()\n",
+    "\n",
+    "ridge_predicted = ridge_best.predict(X_test)\n",
+    "ridge_score = ridge_best.score(X_test, y_test)\n",
+    "show_metrics(y_test, ridge_predicted)\n",
+    "print(ridge_best.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.10649204631591362\n",
+      "Mean squared error: 0.021082833214573424\n",
+      "Mean absolute percentage error: 0.4413091428984064\n",
+      "Median absolute error: 0.07212518568128792\n",
+      "r2 score: 0.7994120823666719\n",
+      "{'alpha': 0.01, 'copy_X': True, 'fit_intercept': True, 'max_iter': 500, 'normalize': 'deprecated', 'positive': False, 'precompute': False, 'random_state': None, 'selection': 'cyclic', 'tol': 0.0001, 'warm_start': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso = Lasso()\n",
+    "lasso_params = {\n",
+    "    'alpha': [0.01, 0.1, 0.5, 1, 2],\n",
+    "    'max_iter': [500, 1000, 2000, 3000]\n",
+    "}\n",
+    "\n",
+    "lasso_grid = GridSearchCV(lasso, lasso_params, n_jobs=-1, cv = 5)\n",
+    "lasso_grid.fit(X_train, y_train)\n",
+    "lasso_best = lasso_grid.best_estimator_\n",
+    "lasso_best.get_params()\n",
+    "\n",
+    "lasso_predicted = lasso_best.predict(X_test)\n",
+    "lasso_score = lasso_best.score(X_test, y_test)\n",
+    "show_metrics(y_test, lasso_predicted)\n",
+    "print(lasso_best.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.012387578657451956\n",
+      "Mean squared error: 0.0012954748019051786\n",
+      "Mean absolute percentage error: 0.047100214724191874\n",
+      "Median absolute error: 0.0019571678679805027\n",
+      "r2 score: 0.9876744937354538\n",
+      "{'ccp_alpha': 0.0, 'criterion': 'absolute_error', 'max_depth': 30, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 3, 'min_samples_split': 4, 'min_weight_fraction_leaf': 0.0, 'random_state': None, 'splitter': 'best'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt = DecisionTreeRegressor()\n",
+    "dt_params = {\n",
+    "    'criterion': ['squared_error' , 'friedman_mse', 'absolute_error'],\n",
+    "    'max_depth': [30, 40, 50, 65, 80],\n",
+    "    'min_samples_split': range(2, 6, 2),\n",
+    "    'min_samples_leaf': range(1, 5, 2)\n",
+    "}\n",
+    "\n",
+    "dt_grid = GridSearchCV(dt, dt_params, n_jobs=-1, cv = 5)\n",
+    "dt_grid.fit(X_train, y_train)\n",
+    "dt_best = dt_grid.best_estimator_\n",
+    "dt_best.get_params()\n",
+    "\n",
+    "dt_predicted = dt_best.predict(X_test)\n",
+    "dt_score = dt_best.score(X_test, y_test)\n",
+    "show_metrics(y_test, dt_predicted)\n",
+    "print(dt_best.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -819,21 +1045,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 0.011003271287897793\n",
-      "Mean squared error: 0.000759041396632116\n",
-      "Mean absolute percentage error: 0.04118710884103308\n",
-      "Median absolute error: 0.0034168357378827063\n",
-      "r2 score: 0.9929276404397313\n"
+      "Mean absolute error: 0.010042282499152056\n",
+      "Mean squared error: 0.0006481837066218679\n",
+      "Mean absolute percentage error: 0.040895762987773566\n",
+      "Median absolute error: 0.0031175750405922076\n",
+      "r2 score: 0.99383300059191\n",
+      "{'learning_rate': 0.1, 'loss': 'squared_error', 'max_depth': 10, 'max_features': 'log2', 'min_samples_split': 2, 'n_estimators': 150}\n"
      ]
     }
    ],
    "source": [
-    "X = dataset.copy()\n",
-    "y = X.pop(\"Charge_capacity_ratio\")\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "train_X, test_X, train_y, test_y = train_test_split(X, y,\n",
-    "                                                    test_size = 0.3, random_state = 123)\n",
     "xgboost_params = {\n",
     "    \"n_estimators\": [100, 150, 200],\n",
     "    \"max_depth\": [10, 15],\n",
@@ -844,35 +1065,17 @@
     "}\n",
     "\n",
     "gsc = GridSearchCV(\n",
-    "    estimator= GradientBoostingRegressor(),\n",
-    "    param_grid=xgboost_params,\n",
-    "    cv=3, n_jobs=-1)\n",
+    "    estimator = GradientBoostingRegressor(),\n",
+    "    param_grid = xgboost_params,\n",
+    "    cv=4, n_jobs=-1)\n",
     "\n",
     "\n",
-    "fit=gsc.fit(train_X, train_y)\n",
+    "fit=gsc.fit(X_train, y_train)\n",
     "\n",
-    "pred = gsc.predict(test_X)\n",
+    "pred = gsc.predict(X_test)\n",
     "\n",
-    "show_metrics(test_y, pred)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'learning_rate': 0.1, 'loss': 'squared_error', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 2, 'n_estimators': 150}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(fit.best_params_)"
+    "show_metrics(y_test, pred)\n",
+    "print(fit.best_params_)\n"
    ]
   }
  ],
