--- a/Regression_sklearn.ipynb
+++ b/Regression_sklearn.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Soft\\Anaconda\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -373,7 +381,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +441,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +686,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -700,7 +708,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -771,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -793,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,24 +879,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 0.0811574929521724\n",
-      "Mean squared error: 0.013238610033722554\n",
-      "Mean absolute percentage error: 0.32571057104979134\n",
-      "Median absolute error: 0.05373241846572573\n",
-      "r2 score: 0.8740441954837226\n"
+      "Mean absolute error: 0.097668334376739\n",
+      "Mean squared error: 0.01743984897404704\n",
+      "Mean absolute percentage error: 0.38810889181535\n",
+      "Median absolute error: 0.07114507520508215\n",
+      "r2 score: 0.8340724439670805\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'alpha': 1.0,\n",
+       "{'alpha': 0.01,\n",
        " 'copy_X': True,\n",
        " 'fit_intercept': True,\n",
        " 'l1_ratio': 0.3,\n",
@@ -902,7 +910,7 @@
        " 'warm_start': False}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,6 +919,7 @@
     "elastic_net = ElasticNet()\n",
     "elastic_net_params = {\n",
     "    \"l1_ratio\": [0.3, 0.5, 0.7],\n",
+    "    'alpha': [0.01, 0.1, 0.5, 1, 2],\n",
     "}\n",
     "\n",
     "elastic_net_grid = GridSearchCV(elastic_net, elastic_net_params, n_jobs=-1, cv = 5)\n",
@@ -920,7 +929,7 @@
     "\n",
     "elastic_net_predicted = elastic_net_best.predict(X_test)\n",
     "elastic_net_score = elastic_net_best.score(X_test, y_test)\n",
-    "show_metrics(y_test, lr_predicted)\n",
+    "show_metrics(y_test, elastic_net_predicted)\n",
     "elastic_net_best.get_params()"
    ]
   },
